--- a/index.html
+++ b/index.html
@@ -1,92 +1,223 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
+<!DOCTYPE html> 
+<html> 
+<head> 
+  <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-  <title>My LIFF app</title>
-  <link rel="stylesheet" href="css/style.css" media="all">
-</head>
+  <title>LIFF - LINE Front-end Framework</title> 
+</head> 
+    <style>
+    body { padding: 259px }
+    button { display: none; width: 50%; padding: 33px; margin: 259px auto }
+   </style>
 <body>
-  <p id="os"><b>OS:</b> </p>
-  <p id="language"><b>Language:</b> </p>
-  <p id="version"><b>Version:</b> </p>
-  <p id="isInClient"><b>isInClient:</b> </p>
-  <p id="accessToken"><b>AccessToken:</b> </p>
-  <img id="pictureUrl">
-  <p id="userId"><b>userId:</b> </p>
-  <p id="displayName"><b>displayName:</b> </p>
-  <p id="statusMessage"><b>statusMessage:</b> </p>
-  <p id="decodedIDToken"><b>email:</b> </p>
-  <p id="type"><b>type:</b> </p>
-  <p id="viewType"><b>viewType:</b> </p>
-  <p id="utouId"><b>utouId:</b> </p>
-  <p id="roomId"><b>roomId:</b> </p>
-  <p id="groupId"><b>groupId:</b> </p>
-  <p id="friendship"><b>isFriendship:</b> </p>
-  <p id="scanCode"><b>Code:</b> </p>
-  <p id="isLoggedIn"><b>isLoggedIn:</b> </p>
-  <p id="universalLink1"><b>Universal Link:</b> </p>
-  <p id="universalLink2"><b>Universal Link with Query params:</b> </p>
-  <p><a href="liff/path/?param=9">Link to Path</a></p>
-
-  <button id="btnMsg" onclick="sendMsg()">Send Message</button>
-  <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
-  <button onclick="openWindow()">Open Window</button>
-  <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button>
-  <button id="btnClose" onclick="closed()">Close</button>
-
-  <!-- <script src="js/vconsole.min.js"></script> -->
-  <!-- <script>
-    var vConsole = new VConsole()
-    console.log("Hello World!")
-  </script> -->
-
-  <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
-  <script>
-    function createUniversalLink() {
-    }
-
-    async function shareMsg() {
-    }
-
-    function logOut() {
-    }
-
-    function closed() {
-    }
-
-    async function scanCode() {
-    }
-
-    function openWindow() {
-    }
-
-    async function getFriendship() {
-    }
-
-    async function sendMsg() {
-    }
-
-    function getContext() {
-    }
-
-    async function getUserProfile() {
-    }
-
-    function getEnvironment() {
-    }
-
+  <script src="https://static.line-scdn.net/liff/edge/versions/2.9.0/sdk.js"></script>
+  <script> 
     async function main() {
-      alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "YOUR-LIFF-ID" })
-      // getEnvironment()
-      // getUserProfile()
-      // getContext()
-      // getFriendship()
-      // createUniversalLink()
+      await liff.init({ liffid: "1656966120-lGYWpjrr" }) 
+      await liff.shareTargetPicker([
+    {
+    type: "flex",
+    altText: "ทดสอบโดยโบ้ V.2", 
+    contents: [
+    {
+      "type": "bubble",
+      "hero": {
+        "type": "image",
+        "url": "https://sv1.picz.in.th/images/2022/03/07/r2Knqt.jpg",
+        "size": "full",
+        "action": {
+          "type": "uri",
+          "label": "action",
+          "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
+        }
+      },
+      "body": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "text",
+            "text": "3 โปรแรง แตกหนัก",
+            "size": "md",
+            "color": "#130907",
+            "align": "center",
+            "margin": "sm",
+            "weight": "bold"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D",
+              "label": "49 รับ 100"
+            },
+            "margin": "none",
+            "height": "sm",
+            "style": "primary",
+            "color": "#FD8210",
+            "offsetTop": "xs"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D",
+              "label": "75 รับ 100"
+            },
+            "margin": "none",
+            "height": "sm",
+            "style": "primary",
+            "color": "#3DCEEA",
+            "offsetTop": "md"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D",
+              "label": "30 รับ 100"
+            },
+            "margin": "none",
+            "height": "sm",
+            "style": "primary",
+            "color": "#FD6574",
+            "offsetTop": "xl"
+          }
+        ],
+        "paddingAll": "lg",
+        "paddingTop": "none",
+        "offsetTop": "none"
+      }
+    },
+    {
+      "type": "bubble",
+      "size": "mega",
+      "hero": {
+        "type": "image",
+        "url": "https://sv1.picz.in.th/images/2022/03/07/r23RyS.jpg",
+        "size": "full",
+        "margin": "none",
+        "aspectRatio": "1:1",
+        "action": {
+          "type": "uri",
+          "label": "action",
+          "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
+        }
+      },
+      "body": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "text",
+            "text": "สายมู โปรเสริมดวง",
+            "size": "md",
+            "margin": "none",
+            "weight": "bold",
+            "align": "center",
+            "color": "#130907"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "ส่งให้เพื่อน",
+              "uri": "https://liff.line.me/1656956300-xKEN2BdR"
+            },
+            "color": "#F15A0A",
+            "style": "primary",
+            "height": "md",
+            "offsetTop": "xs",
+            "offsetBottom": "none",
+            "offsetStart": "none",
+            "gravity": "center",
+            "margin": "xs",
+            "adjustMode": "shrink-to-fit"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "รับยอดเสียคืน",
+              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
+            },
+            "color": "#D21617",
+            "style": "primary",
+            "height": "md",
+            "offsetTop": "xs",
+            "offsetBottom": "none",
+            "offsetStart": "none",
+            "gravity": "center",
+            "margin": "xs",
+            "adjustMode": "shrink-to-fit"
+          }
+        ]
+      }
+    },
+    {
+      "type": "bubble",
+      "hero": {
+        "type": "image",
+        "url": "https://sv1.picz.in.th/images/2022/03/07/r2w3CE.jpg",
+        "aspectRatio": "1:1",
+        "size": "full",
+        "margin": "none",
+        "action": {
+          "type": "uri",
+          "label": "action",
+          "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
+        }
+      },
+      "body": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "text",
+            "text": "ข้อดีของเว็บตรง",
+            "margin": "none",
+            "size": "md",
+            "color": "#130907",
+            "weight": "bold",
+            "align": "center"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "uri": "https://lin.ee/OAnsWCj",
+              "label": "ฝาก - ถอน"
+            },
+            "margin": "xs",
+            "height": "md",
+            "style": "primary",
+            "color": "#FF6B71",
+            "offsetTop": "xs"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "uri": "https://bit.ly/3BVjmhi",
+              "label": "ทางเข้าเว็บไซต์"
+            },
+            "margin": "xs",
+            "style": "primary",
+            "color": "#FC4542",
+            "height": "md",
+            "offsetBottom": "none",
+            "offsetTop": "sm"
+          }
+        ]
+      }
     }
-    main()
-  </script>
-</body>
+  ]
+}
+   }
+   ])
+   liff.closeWindow()
+  }
+  main() 
+ </script>
+</body> 
 </html>
