--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             "action": {
               "type": "uri",
               "label": "ส่งให้เพื่อน",
-              "uri": "https://liff.line.me/1656956300-xKEN2BdR"
+              "uri": "https://liff.line.me/1656966120-lGYWpjrr"
             },
             "color": "#F15A0A",
             "style": "primary",
@@ -235,7 +235,7 @@
       window.location.reload()
     }
     async function main() {
-      await liff.init({ liffId: "1656956300-xKEN2BdR" })
+      await liff.init({ liffId: "1656966120-lGYWpjrr" })
       if (liff.isLoggedIn()) {
         document.getElementById("btnShare").style.display = "block"
         if (!liff.isInClient()) {
