--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     {
     type: "flex",
     altText: "ทดสอบโดยโบ้ V.2", 
-    contents: [
+    contents: {
+  "type": "carousel",
+  "contents": [
     {
       "type": "bubble",
       "hero": {
