--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-  <title>LIFF - LINE Front-end Framework</title> 
+<title>LIFF - LINE Front-end Framework</title> 
 </head> 
-    <style>
-    body { padding: 259px }
-    button { display: none; width: 50%; padding: 33px; margin: 259px auto }
-   </style>
 <body>
   <script src="https://static.line-scdn.net/liff/edge/versions/2.9.0/sdk.js"></script>
   <script> 
@@ -19,234 +15,45 @@
     type: "flex",
     altText: "ทดสอบโดยโบ้ V.2", 
     contents: {
-  "type": "carousel",
-  "contents": [
-    {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/03/07/r2Knqt.jpg",
-        "size": "full",
-        "action": {
-          "type": "uri",
-          "label": "action",
-          "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
-        }
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "contents": [
-          {
-            "type": "text",
-            "text": "3 โปรแรง แตกหนัก",
-            "size": "md",
-            "color": "#130907",
-            "align": "center",
-            "margin": "sm",
-            "weight": "bold"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D",
-              "label": "49 รับ 100"
-            },
-            "margin": "none",
-            "height": "sm",
-            "style": "primary",
-            "color": "#FD8210",
-            "offsetTop": "xs"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D",
-              "label": "75 รับ 100"
-            },
-            "margin": "none",
-            "height": "sm",
-            "style": "primary",
-            "color": "#3DCEEA",
-            "offsetTop": "md"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D",
-              "label": "30 รับ 100"
-            },
-            "margin": "none",
-            "height": "sm",
-            "style": "primary",
-            "color": "#FD6574",
-            "offsetTop": "xl"
-          }
-        ],
-        "paddingAll": "lg",
-        "paddingTop": "none",
-        "offsetTop": "none"
-      }
-    },
-    {
-      "type": "bubble",
-      "size": "mega",
-      "hero": {
-        "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/03/07/r23RyS.jpg",
-        "size": "full",
-        "margin": "none",
-        "aspectRatio": "1:1",
-        "action": {
-          "type": "uri",
-          "label": "action",
-          "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
-        }
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "contents": [
-          {
-            "type": "text",
-            "text": "สายมู โปรเสริมดวง",
-            "size": "md",
-            "margin": "none",
-            "weight": "bold",
-            "align": "center",
-            "color": "#130907"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "ส่งให้เพื่อน",
-              "uri": "https://liff.line.me/1656966120-lGYWpjrr"
-            },
-            "color": "#F15A0A",
-            "style": "primary",
-            "height": "md",
-            "offsetTop": "xs",
-            "offsetBottom": "none",
-            "offsetStart": "none",
-            "gravity": "center",
-            "margin": "xs",
-            "adjustMode": "shrink-to-fit"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "รับยอดเสียคืน",
-              "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
-            },
-            "color": "#D21617",
-            "style": "primary",
-            "height": "md",
-            "offsetTop": "xs",
-            "offsetBottom": "none",
-            "offsetStart": "none",
-            "gravity": "center",
-            "margin": "xs",
-            "adjustMode": "shrink-to-fit"
-          }
-        ]
-      }
-    },
-    {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/03/07/r2w3CE.jpg",
-        "aspectRatio": "1:1",
-        "size": "full",
-        "margin": "none",
-        "action": {
-          "type": "uri",
-          "label": "action",
-          "uri": "https://sport.playauto.cloud/?prefix=QU1PTkw%3D"
-        }
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "contents": [
-          {
-            "type": "text",
-            "text": "ข้อดีของเว็บตรง",
-            "margin": "none",
-            "size": "md",
-            "color": "#130907",
-            "weight": "bold",
-            "align": "center"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "uri": "https://lin.ee/OAnsWCj",
-              "label": "ฝาก - ถอน"
-            },
-            "margin": "xs",
-            "height": "md",
-            "style": "primary",
-            "color": "#FF6B71",
-            "offsetTop": "xs"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "uri": "https://bit.ly/3BVjmhi",
-              "label": "ทางเข้าเว็บไซต์"
-            },
-            "margin": "xs",
-            "style": "primary",
-            "color": "#FC4542",
-            "height": "md",
-            "offsetBottom": "none",
-            "offsetTop": "sm"
-          }
-        ]
-      }
+  "type": "bubble",
+  "hero": {
+    "type": "image",
+    "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_1_cafe.png",
+    "size": "full",
+    "aspectRatio": "20:13",
+    "aspectMode": "cover",
+    "action": {
+      "type": "uri",
+      "uri": "http://linecorp.com/"
     }
-  ]
+  },
+  "footer": {
+    "type": "box",
+    "layout": "vertical",
+    "spacing": "sm",
+    "contents": [
+      {
+        "type": "button",
+        "style": "link",
+        "height": "sm",
+        "action": {
+          "type": "uri",
+          "label": "share",
+          "uri": "https://liff.line.me/1656966120-lGYWpjrr"
+        }
+      },
+      {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [],
+        "margin": "sm"
+      }
+    ],
+    "flex": 0
+  }
 }
-   }
+}
    ])
-      if (result) {
-        alert(`[${result.status}] Message sent!`)
-      } else {
-        const [majorVer, minorVer, patchVer] = (liff.getLineVersion() || "").split('.');
-
-        if (minorVer === undefined) {
-          alert('ShareTargetPicker was canceled in external browser')
-          return
-        }
-
-        if (parseInt(majorVer) >= 10 && parseInt(minorVer) >= 10 && parseInt(patchVer) > 0) {
-          alert('ShareTargetPicker was canceled in LINE app')
-        }
-      }
-    }
-    function logOut() {
-      liff.logout()
-      window.location.reload()
-    }
-    async function main() {
-      await liff.init({ liffId: "1656966120-lGYWpjrr" })
-      if (liff.isLoggedIn()) {
-        document.getElementById("btnShare").style.display = "block"
-        if (!liff.isInClient()) {
-          document.getElementById("btnLogOut").style.display = "block"
-        }
-      } else {
-        document.getElementById("btnLogin").style.display = "block"
-      }
-    }
    liff.closeWindow()
   }
   main() 
