--- a/index.html
+++ b/index.html
@@ -10,50 +10,38 @@
   <script> 
     async function main() {
       await liff.init({ liffid: "1656966120-lGYWpjrr" }) 
-      await liff.shareTargetPicker([
-    {
-    type: "flex",
-    altText: "ทดสอบโดยโบ้ V.2", 
-    contents: {
-  "type": "bubble",
-  "hero": {
-    "type": "image",
-    "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_1_cafe.png",
-    "size": "full",
-    "aspectRatio": "20:13",
-    "aspectMode": "cover",
-    "action": {
-      "type": "uri",
-      "uri": "http://linecorp.com/"
-    }
-  },
-  "footer": {
-    "type": "box",
-    "layout": "vertical",
-    "spacing": "sm",
-    "contents": [
+      await liff.shareTargetPicker(
+      [
+        {
+          type: "text",
+          text: "Hello, World!",
+        },
+      ],
       {
-        "type": "button",
-        "style": "link",
-        "height": "sm",
-        "action": {
-          "type": "uri",
-          "label": "share",
-          "uri": "https://liff.line.me/1656966120-lGYWpjrr"
-        }
-      },
-      {
-        "type": "box",
-        "layout": "vertical",
-        "contents": [],
-        "margin": "sm"
+        isMultiple: true,
       }
-    ],
-    "flex": 0
-  }
+    )
+    .then(function (res) {
+      if (res) {
+        // succeeded in sending a message through TargetPicker
+        console.log(`[${res.status}] Message sent!`)
+      } else {
+        const [majorVer, minorVer] = (liff.getLineVersion() || "").split('.');
+        if (parseInt(majorVer) == 10 && parseInt(minorVer) < 11) {
+          // LINE 10.3.0 - 10.10.0
+          // Old LINE will access here regardless of user's action
+          console.log('TargetPicker was opened at least. Whether succeeded to send message is unclear')
+        } else {
+          // LINE 10.11.0 -
+          // sending message canceled
+          console.log('TargetPicker was closed!')
+        }
+      }
+    }).catch(function (error) {
+      // something went wrong before sending a message
+      console.log('something wrong happen')
+    })
 }
-    }
-   ])
    liff.closeWindow()
   }
   main() 
