--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>ทดสอบโดยโบ้ V.2</title> 
 </head> 
 <body>
-  <script src="https://static.line-scdn.net/liff/edge/versions/2/sdk.js"></script>
+  <script src="https://static.line-scdn.net/liff/edge/versions/2.9.0/sdk.js"></script>
   <script> 
     async function main() {
       await liff.init({ liffid: "1656966120-lGYWpjrr" }) 
