--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">Share Target Picker</button></left>
-  <button id="btnLogin" onclick="liff.login()">Log In</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button>
   <script src="https://static.line-scdn.net/liff/edge/2.5.0/sdk.js"></script>
   <script>
     async function sendShare() {
       const result = await liff.shareTargetPicker([
         {
           "type": "flex",
-          "altText": "ทดสอบโดยโบ้",
+          "altText": "ทดสอบโดยโบ้ V.2",
           "contents": {
   "type": "carousel",
   "contents": [
