--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     button { display: none; width: 50%; padding: 33px; margin: 259px auto }
   </style>
 <body>
-  <left><button id="btnShare" onclick="sendShare()">Share Target Picker</button></left>
+  <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
+  <button id="btnLogin" onclick="liff.login()">Log In</button>
+  <button id="btnLogOut" onclick="logOut()">Log Out</button></left>
   <script src="https://static.line-scdn.net/liff/edge/2.5.0/sdk.js"></script>
   <script>
     async function sendShare() {
