--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     button { display: none; width: 50%; padding: 33px; margin: 459px auto }
   </style>
 <body>
-  <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
+  <left><button id="btnShare","margin":"none","height":"sm","style":"primary","color":"#FD8210","offsetTop":"xs"onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button></left>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
