--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <title>My LIFF App</title>
 </head>
     <style>
-    body { padding: 259px }
-    button { "color": "#F15A0A",
-            "style": "primary",
-            "height": "md", }
+    body { padding: 459px }
+    button { "color": "#F15A0A","style": "primary","height": "md", }
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
