--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     <style>
     body { padding: 459px }
-    button { "color": "#F15A0A","style": "primary","height": "md", }
+    <left> button { "color": "#F15A0A";"style": "primary";"height": "md", }<left>
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
