--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>My LIFF App</title>
 </head>
     <style>
-    body { padding: 459px }
-    <left> button { "color": "#F15A0A";"style": "primary";"height": "md", }<left>
+    body { padding: 259px }
+    <left> button {background-color: #4CAF50;} /* Green */</left>
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
