--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <left> button {background-color: #4CAF50;} /* Green */</left>
   </style>
 <body>
-  <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
+  <left><button id="btnShare" background-color: #4CAF50; onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button></left>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
