--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-  <title>My LIFF App</title>
+  <title>ทดสอบโดยโบ้ V.2</title>
 </head>
     <style>
     body { padding: 259px }
-    <left> button {background-color: #4CAF50;} /* Green */</left>
+    {
+    background-color: #4CAF50; /* Green */
+
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
   </style>
 <body>
   <left><button id="btnShare" background-color: #4CAF50; onclick="sendShare()">ส่งให้เพื่อน</button>
