--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
     <style>
     body { padding: 259px }
-    {
+button {
     background-color: #4CAF50; /* Green */
-
     border: none;
     color: white;
     padding: 15px 32px;
