--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     <style>
     body { padding: 259px }
-button {
+button { width: 100%;
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
