--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     <style>
     body { padding: 200px }
-button { width: 100%;
+  btnShare {width: 250px;}
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
@@ -20,7 +20,17 @@ button { width: 100%;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+  }
+
+btnShare {width: 250px;}
+btnLogin {width: 50%;}
+btnLogOut {
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+  }
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
