--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
     <style>
-    body { padding: 200px }
-btnShare {width: 250px;}
-btnLogin {width: 50%;}
-btnLogOut {
+body { padding: 200px }
+{ button  
     padding-left: 0;
     padding-right: 0;
     width: 100%;
