--- a/index.html
+++ b/index.html
@@ -6,25 +6,8 @@
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
     <style>
-body { padding: 200px }
-button {
-    padding-left: 0;
-    padding-right: 0;
-    width: 100%;
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);          
-}
+    body { padding: 259px }
+    button { display: none; width: 50%; padding: 33px; margin: 259px auto }
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
