--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
 </head>
     <style>
     body { padding: 259px }
-    button { display: none; width: 50%; padding: 33px; margin: 259px auto }
+Button {
+	box-shadow: 0px 3px 2px 0px #f0f7fa;
+	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+	background-color:#33bdef;
+	border-radius:26px;
+	border:2px solid #057fd0;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Times New Roman;
+	font-size:15px;
+	font-weight:bold;
+	padding:12px 55px;
+	text-decoration:none;
+	text-shadow:0px 2px 0px #5b6178;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
+	background-color:#019ad2;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
   </style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
