--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
     <style>
-Button {
+<left> Button {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -30,7 +30,7 @@ Button {
 	position:relative;
 	top:1px;
 }
-  </style>
+  </left></style>
 <body>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
