--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     <style>
 <left> Button { 
-	margin: 259px
+	margin: 259px;
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
