--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	text-decoration:none;
 	text-shadow:0px 2px 0px #5b6178;
 }
-.myButton:hover {
+.Button:hover {
 	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
 	background-color:#019ad2;
 }
-.myButton:active {
+.Button:active {
 	position:relative;
 	top:1px;
 }
