--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
-  <style>
+  <style></left>
 .btnShare,btnLogin,btnLogOut {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
@@ -30,7 +30,7 @@
 	position:relative;
 	top:1px;
 }
-  </style>
+  </left></style>
 <body>
   <button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน
   <button id="btnLogin" onclick="liff.login()">Log In</button>
