--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
-  <style></left>
-.btnShare,btnLogin,btnLogOut {
+  <style><left>
+btnShare,btnLogin,btnLogOut {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -22,11 +22,11 @@
 	text-decoration:none;
 	text-shadow:0px 2px 0px #5b6178;
 }
-.btnShare,btnLogin,btnLogOut:hover {
+btnShare,btnLogin,btnLogOut:hover {
 	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
 	background-color:#019ad2;
 }
-.btnShare,btnLogin,btnLogOut:active {
+btnShare,btnLogin,btnLogOut:active {
 	position:relative;
 	top:1px;
 }
