--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
-  <style><left>
+<style>
 body { padding: 259px }
 btnShare,btnLogin,btnLogOut {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
@@ -31,7 +31,7 @@ btnShare,btnLogin,btnLogOut:active {
 	position:relative;
 	top:1px;
 }
-  </left></style>
+</style>
 <body>
   <button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
