--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 body { padding: 259px }
-btnShare,btnLogin,btnLogOut {
+button {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -23,11 +23,11 @@ btnShare,btnLogin,btnLogOut {
 	text-decoration:none;
 	text-shadow:0px 2px 0px #5b6178;
 }
-btnShare,btnLogin,btnLogOut:hover {
+button:hover {
 	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
 	background-color:#019ad2;
 }
-btnShare,btnLogin,btnLogOut:active {
+button:active {
 	position:relative;
 	top:1px;
 }
