--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 body { padding: 259px }
-button {
+<left> button {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -33,9 +33,9 @@ button:active {
 }
 </style>
 <body>
-	<style>
+	</left><style>
 body { padding: 259px }
-button {
+<left> button {
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -58,7 +58,7 @@ button:hover {
 button:active {
 	position:relative;
 	top:1px;
-}
+} </left>
   <button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button>
