--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
-<style><center>
+<style>
 body { padding: 55px }
-button { margin:17px;
+center button { margin:17px;
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -31,7 +31,7 @@ button:active {
 	position:relative;
 	top:1px;
 }
-</center></style>
+</style>
   <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button></left>
