--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 body { padding: 55px }
-center button { margin:17px;
+button { margin:17px;
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
 	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 	background-color:#33bdef;
@@ -32,9 +32,9 @@ button:active {
 	top:1px;
 }
 </style>
-  <left><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
+  <center><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button></left>
+  <button id="btnLogOut" onclick="logOut()">Log Out</button></center>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     async function sendShare() {
