--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ button:active {
 	top:1px;
 }
 </style>
-  <center><button id="btnShare" onclick="sendShare()">ส่งให้เพื่อน</button>
+  <button id="btnShare" onclick="sendShare()">Share Target Picker</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button></center>
+  <button id="btnLogOut" onclick="logOut()">Log Out</button>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     async function sendShare() {
