--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ button:active {
 	top:1px;
 }
 </style>
+<body>
   <button id="btnShare" onclick="sendShare()">Share Target Picker</button>
   <button id="btnLogin" onclick="liff.login()">Log In</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button>
