--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ button:active {
 	top:1px;
 }
 </style>
-<body>
+<body> <center>
   <button id="btnShare" onclick="sendShare()">แชร์</button>
   <button id="btnLogin" onclick="liff.login()">ล็อกอิน</button>
-  <button id="btnLogOut" onclick="logOut()">ล็อกเอาท์</button>
+  <button id="btnLogOut" onclick="logOut()">ล็อกเอาท์</button></center>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     async function sendShare() {
