--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ button:active {
 }
 </style>
 <body> <center>
-  <button id="btnShare" onclick="sendShare()">แชร์      (ส่งให้เพื่อน)</button>
+  <button id="btnShare" onclick="sendShare()">แชร์ <br> (ส่งให้เพื่อน)</button>
   <button id="btnLogin" onclick="liff.login()">ล็อกอิน</button>
 <br><br><br><br><br><br><br><br><br><br><br>
   <button id="btnLogOut" onclick="logOut()">ล็อกเอาท์</button></center>
