--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>ทดสอบโดยโบ้ V.2</title>
 </head>
 <style>
+p {
+  background-image: url('https://sv1.picz.in.th/images/2022/03/07/r2Knqt.jpg');
+}
 body { padding: 55px }
 button { margin:17px;
 	box-shadow: 0px 3px 2px 0px #f0f7fa;
