--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ button:active {
   <button id="btnLogin" onclick="liff.login()">ล็อกอิน</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <button id="btnLogOut" onclick="logOut()">ล็อกเอาท์</button></center>
+  <button id="btnLogOut" onclick="logOut()">ล็อกเอาท์</button></center></p>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     async function sendShare() {
