--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ button:active {
         const [majorVer, minorVer, patchVer] = (liff.getLineVersion() || "").split('.');
 
         if (minorVer === undefined) {
-          alert('ShareTargetPicker was canceled in external browser')
+          alert('แชร์ไม่สำเร็จr')
           return
         }
 
